# qwen2.5

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-build.yml
